syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string userId = 1;
  string productId = 2;
  int32 quantity = 3;
}

message OrderResponse {
  string message = 1;
}
